kubernetes/andaluciaskills-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: andaluciaskills-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: andaluciaskills
  template:
    metadata:
      labels:
        app: andaluciaskills
    spec:
      containers:
      - name: spring_boot_app
        image: tu-imagen-springboot
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: andaluciaskills-service
spec:
  selector:
    app: andaluciaskills
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
