kubernetes/competicion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: competicion-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: competicion
  template:
    metadata:
      labels:
        app: competicion
    spec:
      containers:
        - name: angular-app  # Cambié angular_app a angular-app
          image: tu-imagen-angular:latest  # Asegúrate de especificar la imagen correcta
          ports:
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: competicion-service
spec:
  selector:
    app: competicion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
  type: ClusterIP
