kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: competicion-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: competicion.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: competicion-service
            port:
              number: 80
  - host: andaluciaskills.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: andaluciaskills-service
            port:
              number: 80
